tests/paczka1/fuzzy1/84865446.err
Error in line 11: hdGMwK50uT S279 19,6
Error in line 1: yk2OY A438 65,0
Error in line 39: Y8GgISW A438 34,/
